<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <!-- parent -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
        <!-- lookup parent from a repository -->
        <relativePath/>
    </parent>
    <!-- services -->
    <groupId>com.rslakra.services.automotive</groupId>
    <artifactId>automobile</artifactId>
    <version>${revision}</version>
    <packaging>jar</packaging>
    <name>${project.artifactId}</name>
    <description>The ${project.artifactId} Service</description>

    <!-- properties -->
    <properties>
        <!-- revision -->
        <revision>0.0.0</revision>

        <!-- sourceEncoding & outputEncoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- java version -->
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <!-- maven plugins -->
        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
        <maven-checkstyle-plugin.version>3.5.0</maven-checkstyle-plugin.version>
        <maven-release-plugin.version>3.1.1</maven-release-plugin.version>

        <!-- checkstyle -->
        <code-styles.dir>https://raw.githubusercontent.com/rslakra/code-styles/master</code-styles.dir>
        <checkstyle.threshold>0</checkstyle.threshold>

        <!-- appsuite-core -->
        <appsuite-core.version>0.0.74</appsuite-core.version>
        <!-- appsuite-spring -->
        <appsuite-spring.version>0.0.32</appsuite-spring.version>

        <!-- lombok -->
        <lombok.version>1.18.34</lombok.version>

        <!-- swagger -->
        <swagger.skip>false</swagger.skip>

        <!-- liquibase -->
        <liquibase.version>4.19.0</liquibase.version>

        <!-- h2 -->
        <h2.version>2.3.232</h2.version>

        <!-- mainClassPath -->
        <mainClassPath>com.rslakra.automobile.AutomobileApplication</mainClassPath>

        <!-- junit-jupiter-params -->
        <junit-jupiter-params.version>5.10.2</junit-jupiter-params.version>

    </properties>

    <!-- dependencies -->
    <dependencies>

        <!-- appsuite-core -->
        <dependency>
            <groupId>com.rslakra.appsuite</groupId>
            <artifactId>appsuite-core</artifactId>
            <version>${appsuite-core.version}</version>
        </dependency>

        <!-- appsuite-spring -->
        <dependency>
            <groupId>com.rslakra.appsuite</groupId>
            <artifactId>appsuite-spring</artifactId>
            <version>${appsuite-spring.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>${liquibase.version}</version>
        </dependency>

        <!-- Databases -->
        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
        </dependency>

        <!-- Thymeleaf -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>

        <!-- Thymeleaf Spring Security integration -->
        <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
        </dependency>

        <!-- spring-boot -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <!--uncomment below if deploying in web container -->
<!--        <dependency>-->
<!--            <groupId>org.springframework.boot</groupId>-->
<!--            <artifactId>spring-boot-starter-tomcat</artifactId>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->

        <!-- spring-boot-test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- build -->
    <build>
        <!-- finalName  -->
        <finalName>${project.artifactId}</finalName>

        <!-- plugins -->
        <plugins>
            <!-- spring-boot-maven-plugin -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${project.parent.version}</version>
                <configuration>
                    <mainClass>${mainClassPath}</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- maven-compiler-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- maven-checkstyle-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <configuration>
                    <configLocation>${code-styles.dir}/styles.xml</configLocation>
                    <propertiesLocation>${code-styles.dir}/checkstyle.properties</propertiesLocation>
                </configuration>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <configLocation>${code-styles.dir}/styles.xml</configLocation>
                            <logViolationsToConsole>true</logViolationsToConsole>
                            <maxAllowedViolations>${checkstyle.threshold}</maxAllowedViolations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- reporting -->
    <reporting>
        <!-- plugins -->
        <plugins>
            <!-- maven-checkstyle-plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <configuration>
                    <configLocation>${code-styles.dir}/styles.xml</configLocation>
                    <propertiesLocation>${code-styles.dir}/checkstyle.properties</propertiesLocation>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

</project>
